--- a/website/model2.html
+++ b/website/model2.html
@@ -15,19 +15,12 @@
             <li><a href="model2.html">Model 2</a></li>
         </ul>
     </nav>
+
     <main>
         <div class="content-box_wrap" style="margin-top:200rem">
             <div class = "content-img">
-                <h3>3D Plot for First Frame</h3>
-                <img src="./assets/3dplot.png">
-            </div>
-            <div class = "content-img">
-                <h3>Final Ball Heatmap</h3>
-                <img src="./assets/heatmap.png">
-            </div>
-            <div class = "content-img">
-                <h3>Violin Plot Pitch Spin for Hits vs Miss</h3>
-                <img src="./assets/violinplot.png">
+                <h3>Model 1: Random Forest</h3>
+                <img src="./assets/randomforestmatrix.png">
             </div>
         </div>
     </main>
