--- a/website/index.html
+++ b/website/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>WSD Hackathon</h1>
-    <nav class='navbar'>
-        <ul>
+    <header>
+        <ul class="navbar">
             <li><a href="index.html">Predictions</a></li>
             <li><a href="model1.html">Model 1</a></li>
             <li><a href="model2.html">Model 2</a></li>
         </ul>
-    </nav>
-    <main>
-        <div class="content-box_wrap" style="margin-top:200rem">
+    </header>
+    <h1>WSD Hackathon</h1>
+        <div class="content-box_wrap">
             <div class = "content-img">
                 <h3>3D Plot for First Frame</h3>
                 <img src="./assets/3dplot.png">
@@ -30,6 +29,5 @@
                 <img src="./assets/violinplot.png">
             </div>
         </div>
-    </main>
 </body>
 </html>
