Fixed weird margin and updated frontend files

--- a/website/index.html
+++ b/website/index.html
@@ -8,26 +8,29 @@
 </head>
 <body>
     <header>
+        <h1>WSD Hackathon</h1>
         <ul class="navbar">
             <li><a href="index.html">Predictions</a></li>
             <li><a href="model1.html">Model 1</a></li>
             <li><a href="model2.html">Model 2</a></li>
         </ul>
     </header>
-    <h1>WSD Hackathon</h1>
-        <div class="content-box_wrap">
-            <div class = "content-img">
+    <br><br><br><br>
+    <section class="homepage">
+        <div class="boxwrap">
+            <div class = "contentimg">
                 <h3>3D Plot for First Frame</h3>
                 <img src="./assets/3dplot.png">
             </div>
-            <div class = "content-img">
+            <div class = "contentimg">
                 <h3>Final Ball Heatmap</h3>
                 <img src="./assets/heatmap.png">
             </div>
-            <div class = "content-img">
+            <div class = "contentimg">
                 <h3>Violin Plot Pitch Spin for Hits vs Miss</h3>
                 <img src="./assets/violinplot.png">
             </div>
         </div>
+    </section>
 </body>
 </html>
