--- a/website/model1.html
+++ b/website/model1.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>WSD Hackathon</h1>
-    <nav class='navbar'>
-        <ul>
+    <header>
+        <h1>WSD Hackathon</h1>
+        <ul class="navbar">
             <li><a href="index.html">Predictions</a></li>
             <li><a href="model1.html">Model 1</a></li>
             <li><a href="model2.html">Model 2</a></li>
         </ul>
-    </nav>
-
-    <main>
-        <div class="content-box_wrap" style="margin-top:200rem">
+    </header>
+    <br><br><br><br>
+    <section class="homepage">
+        <div class="boxwrap">
             <div class = "content-img">
                 <h3>Model 1: Random Forest</h3>
                 <img src="./assets/randomforestmatrix.png">
             </div>
         </div>
-    </main>
+    </section>
 </body>
 </html>
