Added all of the images and paragraphs to the website

--- a/website/index.html
+++ b/website/index.html
@@ -3,59 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WSD Hackathon Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Header-->
     <header>
         <h1>WSD Hackathon</h1>
+        <!--Navigation Bar-->
         <ul class="navbar">
-            <li><a href="#ballvisual">Predictions</a></li>
-            <li><a href="#pitchinitialspeed">Model 1</a></li>
-            <li><a href="#pitchtype">Model 2</a></li>
+            <li><a href="#model">Model Graphs</a></li>
+            <li><a href="#3D">3D Bat and Ball Visualization</a></li>
+            <li><a href="#pitchtype">Pitch Type Heatmap</a></li>
+            <li><a href="#pitchdata">Pitch Data by Pitch Type</a></li>
+            <li><a href="#pitchresult">Pitch Data by Result</a></li>
         </ul>
     </header>
     <br><br><br><br>
+
+    <!--Main Page-->
     <section class="homepage">
-        <h2 id="ballvisual">Ball</h2>
+        
+        <!--Model Graphs Content-->
+        <h2 id="model">Model Graphs</h2>
         <div class="container">
-            <div class = "contentimg">
-                <h3>3D Plot for First Frame</h3>
-                <img src="./assets/3dplot.png">
-            </div>
+            <!--Graph Image 1-->
             <div class = "contentimg">
                 <h3>Final Ball Heatmap</h3>
-                <img src="../pitch_graphs/BallCloseupVisual.gif">
+                <img class="graphimg" src="../pitch_graphs/HeatMapofHitTypevsPitchType.png">
+                <div class="text">
+                    <p>This heatmap was used to visualize the relationship between pitch type, one of the features we passed into the model, and hit type, which was used when deciding if a hit was favorable for the pitcher as our model output.
+                    </p>
+                </div>
             </div>
+            <!--Graph Image 2-->
             <div class = "contentimg">
-                <h3>Violin Plot Pitch Spin for Hits vs Miss</h3>
-                <img src="../pitch_graphs/FullBallVisual.gif">
+                <h3>Pitch Speed by Hit Type</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchSpeed.PNG">
+                <div class="text">
+                    <p>This heatmap was used to visualize the distribution of initial pitch speed, another input into our model, based on the hit type.</p>
+                </div>
+            </div>
+            <!--Graph Image 3-->
+            <div class = "contentimg">
+                <h3>Confusion Matrix Heatmap</h3>
+                <img class="graphimg" src="../pitch_graphs/ConfusionMatrixHeatmap.png">
+                <div class="text">
+                    <p>This confusion matrix showcases our model’s accuracy, 
+                        including true positives, false positives, true negatives, 
+                        and false negatives. Here, true indicates that the pitch was 
+                        favorable to the pitcher, and false indicates that it was not 
+                        favorable. Through this, we can see that our model had an 87% 
+                        accuracy, though the dataset was also skewed in favor of true.
+                    </p>
+                </div>
             </div>
         </div>
-        <h2 id="pitchinitialspeed">Pitch Initial Speed Predictions</h2>
+
+        <!--3D Bat and Ball Visualization Section-->
+        <h2 id="3D">3D Bat and Ball Visualization</h2>
         <div class="container">
+            <!--Graph Image 4-->
             <div class = "contentimg">
-                <h3>Pitch Initial Speed Frequency Histogram</h3>
-                <img src="../pitch_graphs/Pitch Initial Speed Frequency Histogram.png">
+                <h3>Hit Close-up</h3>
+                <img class="graphimg" src="../pitch_graphs/BallCloseupVisual.gif">
+                <div class="text">
+                    <p>Visualization of how the bat interacts with the ball by zooming in to the frames around when the bat hits the ball.
+                    </p>
+                </div>
             </div>
+            <!--Graph Image 5-->
             <div class = "contentimg">
-                <h3>Pitch Initial Speed Frequency Histogram</h3>
-                <img src="../pitch_graphs/Pitch Initial Speed Frequency.png">
-            </div>
-            <div class = "contentimg">
-                <h3>Pitch Initial Speed Frequency Histogram</h3>
-                <img src="../pitch_graphs/Pitch Initial Spin Frequency Histogram.png">
+                <h3>Full Trajectory</h3>
+                <img class="graphimg" src="../pitch_graphs/FullBallVisual.gif">
+                <div class="text">
+                    <p>Visualization of the full ball and bat trajectory, with the ball changing color based on the velocity magnitude at that point in time.
+                    </p>
+                </div>
             </div>
         </div>
-        <h2 id="pitchtype">Pitch Type Predictions</h2>
+
+        <!--Pitch Type Heatmap Section-->
+        <h2 id="pitchtype">Pitch Type Heatmap</h2>
         <div class="container">
+            <!--Graph Image 6-->
             <div class = "contentimg">
-                <h3>Pitch Type Action Counts</h3>
-                <img src="../pitch_graphs/Pitch Type Action Counts.png">
+                <h3>Pitch Type to Outcome Counts</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchTypeOutcome.PNG">
+                <div class="text">
+                    <p>Examines the relationship between pitch type and outcome by creating a heatmap with a count of how many times each pitch type resulted in each outcome.
+                    </p>
+                </div>
             </div>
+            <!--Graph Image 7-->
             <div class = "contentimg">
-                <h3>Pitch Initial Speed Frequency Histogram</h3>
-                <img src="../pitch_graphs/Pitch Type Outcomes.png">
+                <h3>Pitch Type to Action Count</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchTypeAction.PNG">
+                <div class="text">
+                    <p>Examines the relationship between pitch type and action by creating a heatmap with a count of how many times each pitch type resulted in each action.
+                    </p>
+                </div>
+            </div>
+            <!--Graph Image 8-->
+            <div class = "contentimg">
+                <h3>Pitch Type to Inning Number Count</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchTypeInning.PNG">
+                <div class="text">
+                    <p>Examines the relationship between pitch type and inning by creating a heatmap with a count of how many times each pitch type was used in each inning.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!--Pitch Data by Pitch Type Section-->
+        <h2 id="pitchdata">Pitch Data by Pitch Type</h2>
+        <div class="container">
+            <!--Graph Image 9-->
+            <div class = "contentimg">
+                <h3>Pitch Initial Speed Frequency</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchInitialSpeedFreq.PNG">
+                <div class="text">
+                    <p>Histogram of the initial speed for each pitch categorized by pitch type.</p>
+                </div>
+            </div>
+            <!--Graph Image 10-->
+            <div class = "contentimg">
+                <h3>Pitch Initial Spin Frequency</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchInitialSpinFreq.PNG">
+                <div class="text">
+                    <p>Histogram of the initial spin for each pitch categorized by pitch type.</p>
+                </div>
+            </div>
+        </div>
+
+        <!--Pitch Data by Result Section-->
+        <h2 id="pitchresult">Pitch Data by Result</h2>
+        <div class="container">
+            <!--Graph Image 11-->
+            <div class = "contentimg">
+                <h3>Pitch Speed Distribution</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchSpeedDistribution.PNG">
+                <div class="text">
+                    <p>Histogram of the initial speed for each pitch categorized by result.</p>
+                </div>
+            </div>
+            <!--Graph Image 12-->
+            <div class = "contentimg">
+                <h3>Pitch Spin Distribution</h3>
+                <img class="graphimg" src="../pitch_graphs/PitchSpinDistribution.PNG">
+                <div class="text">
+                    <p>Histogram of the initial spin for each pitch categorized by result.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
