Changed styling for text and added image for Confusion Matrix Heatmap

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!--Graph Image 3-->
             <div class = "contentimg">
                 <h3>Confusion Matrix Heatmap</h3>
-                <img class="graphimg" src="../pitch_graphs/ConfusionMatrixHeatmap.png">
+                <img class="graphimg" src="./pitch_graphs/ConfusionMatrixHeatmap.png">
                 <div class="text">
                     <p>This confusion matrix showcases our model’s accuracy, 
                         including true positives, false positives, true negatives, 
