Changed image source links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!--Graph Image 1-->
             <div class = "contentimg">
                 <h3>Final Ball Heatmap</h3>
-                <img class="graphimg" src="../pitch_graphs/HeatMapofHitTypevsPitchType.png">
+                <img class="graphimg" src="./pitch_graphs/HeatMapofHitTypevsPitchType.png">
                 <div class="text">
                     <p>This heatmap was used to visualize the relationship between pitch type, one of the features we passed into the model, and hit type, which was used when deciding if a hit was favorable for the pitcher as our model output.
                     </p>
@@ -39,7 +39,7 @@
             <!--Graph Image 2-->
             <div class = "contentimg">
                 <h3>Pitch Speed by Hit Type</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchSpeed.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchSpeed.PNG">
                 <div class="text">
                     <p>This heatmap was used to visualize the distribution of initial pitch speed, another input into our model, based on the hit type.</p>
                 </div>
@@ -66,7 +66,7 @@
             <!--Graph Image 4-->
             <div class = "contentimg">
                 <h3>Hit Close-up</h3>
-                <img class="graphimg" src="../pitch_graphs/BallCloseupVisual.gif">
+                <img class="graphimg" src="./pitch_graphs/BallCloseupVisual.gif">
                 <div class="text">
                     <p>Visualization of how the bat interacts with the ball by zooming in to the frames around when the bat hits the ball.
                     </p>
@@ -75,7 +75,7 @@
             <!--Graph Image 5-->
             <div class = "contentimg">
                 <h3>Full Trajectory</h3>
-                <img class="graphimg" src="../pitch_graphs/FullBallVisual.gif">
+                <img class="graphimg" src="./pitch_graphs/FullBallVisual.gif">
                 <div class="text">
                     <p>Visualization of the full ball and bat trajectory, with the ball changing color based on the velocity magnitude at that point in time.
                     </p>
@@ -89,7 +89,7 @@
             <!--Graph Image 6-->
             <div class = "contentimg">
                 <h3>Pitch Type to Outcome Counts</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchTypeOutcome.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchTypeOutcome.PNG">
                 <div class="text">
                     <p>Examines the relationship between pitch type and outcome by creating a heatmap with a count of how many times each pitch type resulted in each outcome.
                     </p>
@@ -98,7 +98,7 @@
             <!--Graph Image 7-->
             <div class = "contentimg">
                 <h3>Pitch Type to Action Count</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchTypeAction.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchTypeAction.PNG">
                 <div class="text">
                     <p>Examines the relationship between pitch type and action by creating a heatmap with a count of how many times each pitch type resulted in each action.
                     </p>
@@ -107,7 +107,7 @@
             <!--Graph Image 8-->
             <div class = "contentimg">
                 <h3>Pitch Type to Inning Number Count</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchTypeInning.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchTypeInning.PNG">
                 <div class="text">
                     <p>Examines the relationship between pitch type and inning by creating a heatmap with a count of how many times each pitch type was used in each inning.
                     </p>
@@ -121,7 +121,7 @@
             <!--Graph Image 9-->
             <div class = "contentimg">
                 <h3>Pitch Initial Speed Frequency</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchInitialSpeedFreq.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchInitialSpeedFreq.PNG">
                 <div class="text">
                     <p>Histogram of the initial speed for each pitch categorized by pitch type.</p>
                 </div>
@@ -129,7 +129,7 @@
             <!--Graph Image 10-->
             <div class = "contentimg">
                 <h3>Pitch Initial Spin Frequency</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchInitialSpinFreq.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchInitialSpinFreq.PNG">
                 <div class="text">
                     <p>Histogram of the initial spin for each pitch categorized by pitch type.</p>
                 </div>
@@ -142,7 +142,7 @@
             <!--Graph Image 11-->
             <div class = "contentimg">
                 <h3>Pitch Speed Distribution</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchSpeedDistribution.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchSpeedDistribution.PNG">
                 <div class="text">
                     <p>Histogram of the initial speed for each pitch categorized by result.</p>
                 </div>
@@ -150,7 +150,7 @@
             <!--Graph Image 12-->
             <div class = "contentimg">
                 <h3>Pitch Spin Distribution</h3>
-                <img class="graphimg" src="../pitch_graphs/PitchSpinDistribution.PNG">
+                <img class="graphimg" src="./pitch_graphs/PitchSpinDistribution.PNG">
                 <div class="text">
                     <p>Histogram of the initial spin for each pitch categorized by result.
                     </p>
